# yaup

./: Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac
po/: POTFILES.in  de.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  debug.h  io.c  io.h  listboxthings.c  listboxthings.h  main.c  resources.c  resources.gresource.xml  upnpcommunication.c  upnpcommunication.h  yaup-i18n.h  yaup.c  yaup.h  yaup.ui
src/gtk/: Makefile.in  menus.ui
